fix: contact section overlap issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -765,6 +765,10 @@ body.light-theme {
 }
 
 /*=============== CONTACT ===============*/
+.contact {
+  padding-bottom: 6.4rem !important;
+}
+
 .contact__container {
   row-gap: 3rem;
   padding-bottom: 3rem;
